[workspace]
members = ["ff_derive"]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"
homepage = "https://github.com/zkcrypto/ff"

[workspace.dependencies]
# Internal
ff = { version = "0.13.1", path = ".", default-features = false }
ff_derive = { version = "0.13.1", path = "ff_derive" }

# External
addchain = "0.2"
bitvec = { version = "1", default-features = false }
byteorder = { version = "1", default-features = false }
num-bigint = "0.3"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1"
quote = "1"
rand_core = { version = "0.10", default-features = false }
subtle = { version = "2.6.1", default-features = false, features = ["i128"] }
syn = { version = "2", features = ["full"] }

# Dev
blake2b_simd = "1"
rand = "0.10"

[package]
name = "ff"
version = "0.13.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/ff/"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
ff_derive = { workspace = true, optional = true }
rand_core = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
blake2b_simd = { workspace = true }
rand = { workspace = true }

[features]
default = ["bits", "std"]
alloc = []
bits = ["bitvec"]
derive = ["byteorder", "ff_derive"]
std = ["alloc"]
derive_bits = ["bits", "ff_derive/bits"]

[[test]]
name = "derive"
required-features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
