[package]
name = "ff_derive"
version = "0.13.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
edition.workspace = true
rust-version.workspace = true
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff-derive/"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
bits = []

[lib]
proc-macro = true

[dependencies]
addchain = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[badges]
maintenance = { status = "passively-maintained" }
